@@ -12,8 +12,20 @@ class Subscription < ActiveRecord::Base
       size = (options[:size] || DEFAULT_PAGE_SIZE).to_i
       n = n.to_i
 
-      records = find(:all, :include => :account_items,
-        :order => "created_at DESC",
+      joins = []
+      conditions = []
+      parameters = []
+
+      if options[:actor]
+        joins << "LEFT JOIN actors ON actors.id = events.actor_id"
+        conditions << "actors.sort_name = ?"
+        parameters << Actor.normalize_name(options[:actor])
+      end
+
+      records = find(:all, :joins => joins,
+        :conditions => conditions.any? ? [conditions.join(" AND "), *parameters] : nil,
+        :include => :account_items,
+        :order => "events.created_at DESC",
         :limit => size + 1,
         :offset => n * size)
 
